--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,13 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+    <groupId>org.controlsfx</groupId>
+    <artifactId>controlsfx</artifactId>
+    <version>11.2.0</version> <!-- O la versión más reciente -->
+</dependency>
+
   </dependencies>
 
   <build>
