--- a/pom.xml
+++ b/pom.xml
@@ -116,21 +116,21 @@
 
         <!-- JavaFX Maven Plugin -->
         <plugin>
-    <groupId>org.openjfx</groupId>
-    <artifactId>javafx-maven-plugin</artifactId>
-    <version>0.0.8</version>
-    <executions>
-        <execution>
-            <goals>
-                <goal>run</goal>
-            </goals>
-        </execution>
-    </executions>
-    <configuration>
-        <mainClass>com.draaisa.view.LoginScreen</mainClass> <!-- Clase principal -->
-        <modulepathMode>true</modulepathMode>
-    </configuration>
+  <groupId>org.openjfx</groupId>
+  <artifactId>javafx-maven-plugin</artifactId>
+  <version>0.0.8</version>
+  <executions>
+      <execution>
+          <goals>
+              <goal>run</goal>
+          </goals>
+      </execution>
+  </executions>
+  <configuration>
+      <mainClass>com.draaisa.view.LoginScreen</mainClass>
+  </configuration>
 </plugin>
+
 
 
         <!-- Maven Compiler Plugin -->
